--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -7,35 +7,6 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
-            <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="124-Sb-dg9">
-                                <rect key="frame" x="87" y="93" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="loginAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="4o3-bT-EaZ"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="510" y="261"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="tlp-TH-j2w">
             <objects>
@@ -97,6 +68,11 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="n8M-07-nto"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="n8M-07-nto"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dtu-uL-jmP">
                                 <rect key="frame" x="265" y="484" width="70" height="32"/>
@@ -162,6 +138,7 @@
                                 <exclude reference="Yyk-4Q-Vaq"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="fvM-VM-M0C"/>
                                 <exclude reference="kIz-Cy-r5X"/>
                                 <exclude reference="Y7k-YV-En3"/>
                             </mask>
